--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -1,8 +1,9 @@
 <section class="docs-section">
 
-## 3. Read DWN Records
+### 5. Read DWN Records
 
 If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property.
+
 
 To return the text data stored in the `record`, add the following to `index.js`:
 ```js
@@ -15,13 +16,13 @@ const readResult = await record.data.text();
 To see the record that was read from the DWN, add the following to <code>index.js</code>:
 
 ```js
-console.log('readResult', readResult)
+console.log('Read result: ', readResult);
 ```
 
 The output will resemble:
 
-```
-Hello Web5
+```js
+Read result: Hello Web5
 ```
 
 </p>
