--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -1,8 +1,8 @@
 <section class="docs-section">
 
-## 2. Write DWN Records
+### 4. Write DWN Records
 
-Now you’re able to write records in the user's [Decentralized Web Node(DWN)](/docs/web5/learn/decentralized-web-nodes).
+Now you’re able to write records in the user's [Decentralized Web Node(DWN)](/docs/web5/learn/decentralized-web-nodes). 
 
 A DWN is a personal data store - a platform for messages, pictures, videos, medical records, and just about any content a user may want to store.
 
@@ -11,21 +11,24 @@ A DWN is a personal data store - a platform for messages, pictures, videos, medi
   <p>
 Your app should not store users' data in your centralized database. Instead, their data should be stored in their DWN. This is how the user retains ownership over their content. Through permissions, users can decide which apps can read, write, and delete content from their DWN.
 
-The DWN exists in local storage under the name `dwn-info`. The DWN persists across browser sessions and can be synched across a user's devices.
+The DWN exists in local storage under the name `dwn-info`. The DWN persists across browser sessions and can be synched across a user's devices. 
 
-A user can host their DWN in mulitple locations. The Web5 SDK is both browser and Node.js compliant, meaning you can use the same APIs on both client side and serverside.
+A user can host their DWN in mulitple locations. The Web5 SDK is both browser and Node.js compliant, meaning you can use the same APIs on both client side and serverside. 
 </p>
 </details>
 
+
 Add the following to `index.js`:
 ```js
-const { record } = await web5.dwn.records.create({
-  data: "Hello Web5",
-  message: {
-    dataFormat: 'text/plain',
-  },
+const {record} = await web5.dwn.records.create(did.id, {
+    author: did.id,
+    data: "Hello Web5",
+    message: {
+        dataFormat: 'text/plain',
+    },
 });
 ```
+
 
 <details>
   <summary>Test your code</summary>
