--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -1,6 +1,6 @@
 <section class="docs-section">
 
-## 4. Update DWN Records
+### 6. Update DWN Records
 
 To update the record, call `update` on the `record` object itself.
 
@@ -15,12 +15,13 @@ const updateResult = await record.update({data: "Hello, I'm updated!"});
 To see the record that was updated in the DWN, add the following to <code>index.js</code>:
 
 ```js
-​console.log('updateResult', await record.data.text())
+console.log('Update result: ', await record.data.text());
 ```
 
 The output will resemble:
+
 ```
-updateResult Hello, I'm updated!
+Update result: Hello, I'm updated!
 ```
 
 </p>
