Revert "Issue #458 - Move Code of Conduct under Open Source"
This reverts commit 078cfba74f8ac5136d3be5ecb65e934d2451b7c7.

--- a/src/pages/code-of-conduct.mdx
+++ b/src/pages/code-of-conduct.mdx
@@ -14,7 +14,7 @@ import TBDBreadcrumbs from '@site/src/components/TBDBreadcrumbs';
   />
   <meta
     property="og:url"
-    content="https://developer.tbd.website/open-source/code-of-conduct"
+    content="https://developer.tbd.website/code-of-conduct"
   />
   <link
     rel="apple-touch-icon"
