Revert "Issue 439/design pass (#473)"
This reverts commit 3243449ac5a4beaf216542889ec60979f041bd61.

--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -1,6 +1,4 @@
-<section class="docs-section">
-
-### 4. Write DWN Records
+## 4. Write DWN Records
 
 Now you’re able to write records in the user's [Decentralized Web Node(DWN)](/docs/web5/learn/decentralized-web-nodes). 
 
@@ -53,7 +51,3 @@ const {record} = await web5.dwn.records.create(did.id, {
 </details>
 
 Enter "Hello Web5" in the input field and click "Run" to write a record to the sandbox DWN.
-
-#### Try it!
-
-</section>
