--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -1,6 +1,4 @@
-<section class="docs-section">
-
-### 6. Update DWN Records
+## 6. Update DWN Records
 
 To update the record, call `update` on the `record` object itself.
 
@@ -28,7 +26,3 @@ Update result: Hello, I'm updated!
 </details>
 
 Enter "Hello, I'm updated" in the input field and click "Run!" to update the record in the sandbox DWN:
-
-#### Try it!
-
-</section>
