--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,6 +1,4 @@
-<section class="docs-section">
-
-### 7. Delete DWN Records
+## 7. Delete DWN Records
 
 Given permission from the user, your app can delete records from their DWN. Similar to reading, we’ll use the `record` object to remove the record.
 
@@ -27,6 +25,4 @@ Delete result: { code: 202, detail: 'Accepted' },
 </p>
 </details>
 
-#### Try it!
-
-</section>
+Click "Run!" to delete the record that was stored in the sandbox DWN:
