--- a/docs/web5/_quickstart-10-next-steps.mdx
+++ b/docs/web5/_quickstart-10-next-steps.mdx
@@ -1,6 +1,4 @@
-<section class="docs-section">
-
-## Summary
+# Summary
 
 Congrats! You've just created a local DWN to serve as your user's
 personal data store. 
@@ -16,10 +14,9 @@ can also read and write from this same data store - essentially, making the user
 :::
 
 
-## Next Steps
+# Next Steps
 
-* [Learn more about DIDs](/docs/web5/learn/decentralized-identifiers)
-* [Learn more about DWNs](/docs/web5/learn/decentralized-web-nodes)
-* [Build a decentralized ToDo app](/docs/web5/build/apps/todo-app-tutorial)
+* Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers)
+* Learn more about [DWNs](/docs/web5/learn/decentralized-web-nodes)
+* Build a decentralized [ToDo app](/docs/web5/build/apps/todo-app-tutorial)
 
-</section>
