--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -6,7 +6,7 @@ import ApiCard from '@site/src/components/ApiCard';
 
 <div>
   <p>The Web5 API References provide access to the Web5 JS SDK, DWN JS SDK, the SSI SDK, and SSI Service API.</p>
-  <div className="grid grid-cols-2 gap-4 pt-6">
+  <div className="grid grid-cols-2 gap-4">
   <ApiCard
       url="https://www.npmjs.com/package/@tbd54566975/web5"
       name="Web5 JavaScript SDK"
