--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,10 +1,10 @@
-<section class="docs-section">
+# Start Building
 
-## Start Building
+## 1. Create Web5 App Instance
 
-### 1. Create a Web5 instance
+The `Web5` class is an isolated API object for doing all things Web5.
 
-The `Web5` class is an isolated API object for doing all things Web5. In `index.js` below the import statement, create a new instance of `Web5`:
+In `index.js` below the import statement, create a new instance of `Web5`:
 
 ```js
 const web5 = new Web5();
@@ -19,7 +19,7 @@ Web5 is split into three main top-level objects:
 We're going to focus on `web5.did` and `web5.dwn` in this Quickstart.
 :::
 
-### 2. Create a DID
+## 2. Create DID
 
 In Web5 apps, a user’s unique identifier - like an email address - is called a [Decentralized Identifier (DID)](/docs/web5/learn/decentralized-identifiers). 
 We are building a decentralized app, so your users are using identifiers that aren't tied to a centralized authority.
@@ -34,13 +34,14 @@ We’re using `ion` as the DID method. Learn more about ION and other [DID metho
 <details>
   <summary>Test your code</summary>
   <p>
+  Wanna see the created DID?
 
-  Wanna see the DID you just created? In <code>index.js</code>, add the following line and save your file:
+  In <code>index.js</code>, add the following line and save your file:
   ```js
   console.log(did.id);
   ```
 
-  Then from your CLI, run:
+  Then from the terminal, run:
   ```bash
   node src/index.js
   ```
@@ -49,6 +50,4 @@ We’re using `ion` as the DID method. Learn more about ION and other [DID metho
   </p>
 </details>
 
-#### Try it!
-
-</section>
+Click "Run!" below to create your user's DID right here in your sandbox:
