--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -1,14 +1,19 @@
 import { content } from '@site/src/content/projects/web5/web5.js';
 
-# WEB5: A DECENTRALIZED WEB PLATFORM
+# WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
 
-## Putting you in control of your data and identity
+## Building an extra decentralized web that puts you in control of your data and identity
 
 The web democratized the exchange of information, but it's missing a key layer: identity. We struggle to secure personal data with hundreds of accounts and passwords we can’t remember. On the web today, identity and personal data have become the property of third parties.
 
 Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper> and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-
+<div
+  style={{ marginTop: '3.25rem', marginBottom: '6rem' }}
+  className="mx-11 tablet:mx-16 desktop:mx-24 mt-7 desktop:mt-14"
+>
+  <SwitchIllustration {...content.web5Illustrations} />
+</div>
 
 <ButtonGroup
   className="pt-24"
@@ -16,34 +21,28 @@ Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, o
     {
       type: 'button',
       data: {
-        label: '🚀 Getting Started',
-        url: '/docs',
-      },
-    },
-    {
-      type: 'button',
-      data: {
-        label: 'Contribute',
-        url: '/open-source/contributing',
+        label: 'Getting Started',
+        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_WEB5.md',
         isExternalLink: true,
-        imageURL: '/img/heart.svg',
+        imageURL: '/img/external-link-blue-icon.svg',
       },
     },
     {
       type: 'button',
       data: {
-        label: 'Chat on Discord',
+        label: 'Chat',
         url: 'https://discord.gg/tbd',
         isExternalLink: true,
-        imageURL: '/img/discord-icon.svg',
+        imageURL: '/img/external-link-blue-icon.svg',
       },
     },
     {
       type: 'button',
       data: {
-        label: '💁🏽‍♀️️ About Web5 from Angie',
-        url: 'blog/what-is-web5',
+        label: 'PDF',
+        url: '/files/Decentralized-Web-Platform.pdf',
         isExternalLink: true,
+        imageURL: '/img/download-icon.svg',
       },
     },
   ]}
