typo quick change

--- a/docs/api/web5-api.mdx
+++ b/docs/api/web5-api.mdx
@@ -114,7 +114,7 @@ console.log(records) // an array of record entries from Bob's DWeb Nodes
 
 The query `request` must contain the following:
 
-- **`from`** - *`DID string`* (*optional*): the decentralized identifier of the DID of the DWeb Node the query will fetch results from.
+- **`from`** - *`DID string`* (*optional*): the decentralized identifier of the DWeb Node the query will fetch results from.
 - **`message`**  - *`object`*: the properties of the DWeb Node Message Descriptor that will be used to construct a valid record query:
     - **`filter`**  - *`object`*: properties against which results of the query will be filtered:
       - **`protocol`** - *`URI string`* (*optional*): the URI of the protocol bucket in which to query.
