changing button label

--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -41,7 +41,7 @@ Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, o
     {
       type: 'button',
       data: {
-        label: '💁🏽‍♀️️ About Web5 from Angie',
+        label: '5️⃣ About Web5',
         url: 'blog/what-is-web5',
         isExternalLink: true,
       },
