--- a/docs/api.mdx
+++ b/docs/api.mdx
@@ -7,7 +7,7 @@ import ApiCard from '@site/src/components/ApiCard';
   <p>The Web5 API References provide access to the Web5 JS SDK, DWN JS SDK, the SSI SDK, and SSI Service API.</p>
   <div className="grid grid-cols-2 gap-4 pt-6">
   <ApiCard
-      url="/docs/api/web5-api"
+      url="/api/web5-js"
       name="Web5 JavaScript SDK"
       description="The Web5 JS SDK provides a simple library for the necessary functionality needed to build Web5 apps at scale. It abstracts away much of the heavy-lifting and aims to make building Web5 apps as close to effortless as possible."
     />
